# COMP1100

./: README.md
Assignments/Assignment2/: README.md  comp1100-assignment2.cabal
Assignments/Assignment2/app/: Main.hs
Assignments/Assignment2/src/: TestPatterns.hs  Turtle.hs
Assignments/Assignment2/test/: TurtleTest.hs
Assignments/Assignment3/: README.md  comp1100-assignment3.cabal  tournament_config.txt
Exam/2021_S1_Final/: Differ.hs  Filterable.hs  HOF.hs  Meal.hs  Polymorphic.hs  Trees.hs
Exam/2021_S1_Mid/: Count.hs  Numbers.hs  Rock.hs
Exam/2021_S2_Final/: Drop.hs  Instances.hs  Lists.hs  Movies.hs  Numbers.hs  Trees.hs
Exam/2021_S2_Mid/: Largest.hs  Pizza.hs  Room.hs
Exam/2022_S1_Final/: BoolFunctions.hs  Dogs.hs  EtaReduction.hs  Intervals.hs  ListFunctions.hs  RadioStations.hs  RepeatedPowers.hs  RoseTrees.hs
Exam/2022_S1_Mid/: OddsOverEvens.hs  Places.hs  SameSign.hs  StringTransformers.hs
Exam/2022_S2_Final/: ChessHeuristic.hs  CutSubTree.hs  Greet.hs  InOrder.hs  Involutive.hs  ListElements.hs  NegateElements.hs  Reverse.hs  RoseTreePaths.hs  Transform.hs
Exam/2022_S2_Mid/: GetUID.hs  MultiplesOf3.hs  ReplaceEvery2nd.hs
Exam/2023_S1_Final/: EqLists.hs  HigherOrder.hs  InLimits.hs  JumpAdd.hs  Managers.hs  Maze.hs  Monsters.hs  TypeChecking.hs
Exam/2023_S1_Mid/: AnyNeg.hs  DietaryMessage.hs  Hexadecimals.hs  Oblong.hs  ReplaceSecond.hs  SafeIntDiv.hs
Exam/2023_S2_Mid/: AnySum.hs  Eyes.hs  MaybeProd.hs  Sentence.hs  Skiponacci.hs  Temperature.hs
Lab/Lab1/: Area.hs
Lab/lab02-1100_s2_2023/: AngleConversion.hs  Area.hs  README.md
(+60 files in other folders)
